<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.podigua</groupId>
    <artifactId>kafka-visark</artifactId>
    <version>2.0.4</version>

    <properties>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>27-ea+10</javafx.version>
        <kafka.version>4.2.0</kafka.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.gitee.podigua</groupId>
            <artifactId>javafx-path</artifactId>
            <version>0.0.5</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-material2-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-antdesignicons-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-material-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-remixicon-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fluentui-pack</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-expression</artifactId>
            <version>6.1.5</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>7.3.2</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>6.1.5</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.12</version>
        </dependency>
        <dependency>
            <groupId>de.jangassen</groupId>
            <artifactId>nsmenufx</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.3.0</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.12.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>io.gitee.podigua</groupId>
                <artifactId>jfx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <name>${APP_TYPE}</name>
                    <addModules>java.base,java.desktop,java.scripting,java.logging,java.management,java.naming,java.net.http,java.security.jgss,java.security.sasl,java.sql,java.transaction.xa,java.xml,jdk.zipfs</addModules>
                    <jlinkOptions>
                        <option>--strip-native-commands</option>
                        <option>--strip-debug</option>
                        <option>--no-man-pages</option>
                        <option>--no-header-files</option>
                        <option>--compress</option>
                        <option>zip-9</option>
                    </jlinkOptions>
                    <macPackageIdentifier>kafka-visark</macPackageIdentifier>
                    <mainClass>com.podigua.kafka.VisarkLauncher</mainClass>
                    <vendor>podigua</vendor>
                    <aboutUrl>https://www.visark.cn</aboutUrl>
                    <copyright>Copyright©2024podigua</copyright>
                    <description>kafka-connect-tools</description>
                    <winDirChooser>true</winDirChooser>
                    <winMenu>true</winMenu>
                    <winShortcut>true</winShortcut>
                    <winPerUserInstall>true</winPerUserInstall>
                    <winShortcutPrompt>true</winShortcutPrompt>
                    <options>
                        <option>-Dprism.vsync=false</option>
                        <option>-Djavafx.animation.fullspeed=true</option>
                        <option>-Dsun.java2d.allowhidpi=false</option>
                        <option>-XX:+UnlockExperimentalVMOptions</option>
                        <option>-XX:+UseCompactObjectHeaders</option>
                        <option>-XX:+UseStringDeduplication</option>
                        <option>-XX:TieredStopAtLevel=1</option>
                        <option>-XX:GCTimeRatio=95</option>
                        <option>-XX:+G1UseAdaptiveIHOP</option>
                        <option>-XX:MaxMetaspaceFreeRatio=50</option>
                        <option>-XX:MinMetaspaceFreeRatio=20</option>
                        <option>-XX:G1PeriodicGCInterval=500</option>
                        <option>-XX:InitiatingHeapOccupancyPercent=20</option>
                        <option>-XX:MaxHeapFreeRatio=10</option>
                        <option>-XX:MinHeapFreeRatio=3</option>
                        <option>-XX:G1HeapWastePercent=3</option>
                        <option>-XX:G1ReservePercent=5</option>
                        <option>-XX:G1MixedGCCountTarget=1</option>
                        <option>-XX:MaxGCPauseMillis=30</option>
                        <option>-Dprism.maxvram=2G</option>
                        <option>-Dprism.order=es2</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
